ci: changed the trigger to activate the workflow

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -4,11 +4,10 @@ on:
   pull_request:
     paths:
       - '**.kt'
-      - '**.yml'
   push:
     paths:
       - '**.kt'
-      - '**.yml'
+  workflow_dispatch:
 
 jobs: 
   test:
